--- a/WebApplication2/Views/Review/EditReview.cshtml
+++ b/WebApplication2/Views/Review/EditReview.cshtml
@@ -94,7 +94,7 @@
     Layout = "_StudentLayout";
 }
 <!-- Page Content -->
-<div class="banner header-text " style="padding-top:inherit;">
+<div class="banner header-text">
     <div class="owl-banner owl-carousel">
         <div class="banner-item-1">
         </div>
