--- a/WebApplication2/Views/Student/Index.cshtml
+++ b/WebApplication2/Views/Student/Index.cshtml
@@ -9,6 +9,8 @@
     .Take(10).ToList();
 }
 
+
+<partial name="_NotificationPartial"></partial>
 @{
     Layout = "_StudentLayout";
 }
@@ -384,7 +386,7 @@
                                 {
                                     course.Picture = "noimage.png";
 
-                                }<a href="#"><img src="~/images/courses/@course.Picture" alt=""></a>
+                                }<a asp-action="details" asp-controller="course" asp-route-id="@course.CourseId"><img src="~/images/courses/@course.Picture" alt=""></a>
                                 <h3>@course.Title</h3>
                                 <p>@course.InstructorFullName</p>
                                 <p>
@@ -460,7 +462,7 @@
                                 {
                                     course.Picture = "noimage.png";
 
-                                }<a href="#"><img src="~/images/courses/@course.Picture" alt=""></a>
+                                }<a asp-action="details" asp-controller="course" asp-route-id="@course.CourseId"><img src="~/images/courses/@course.Picture" alt=""></a>
                                 <h3>@course.Title</h3>
                                 <p>@course.InstructorFullName</p>
                                 <p>
