--- a/WebApplication2/Views/Instructor/Index.cshtml
+++ b/WebApplication2/Views/Instructor/Index.cshtml
@@ -6,6 +6,7 @@
     var reviews = _context.Reviews.OrderByDescending(c => c.Rate)
             .Take(10).ToList();
 }
+<partial name="_NotificationPartial"></partial>
 @{
     Layout = "_InstructorLayout";
 }
