--- a/WebApplication2/Views/Report/AddReport.cshtml
+++ b/WebApplication2/Views/Report/AddReport.cshtml
@@ -14,7 +14,7 @@
     }
 </style>
 
-<div class="banner header-text " style="padding-top:inherit;">
+<div class="banner header-text">
     <div class="owl-banner owl-carousel">
         <div class="banner-item-1">
         </div>
