--- a/WebApplication2/Views/Review/AddReview.cshtml
+++ b/WebApplication2/Views/Review/AddReview.cshtml
@@ -96,10 +96,9 @@
     Layout = "_StudentLayout";
 }
 <!-- Page Content -->
-<div class="banner header-text " style="padding-top:inherit;">
+<div class="banner header-text">
     <div class="owl-banner owl-carousel">
         <div class="banner-item-1">
-
         </div>
     </div>
 </div>
