--- a/WebApplication2/Views/Shared/_InstructorLayout.cshtml
+++ b/WebApplication2/Views/Shared/_InstructorLayout.cshtml
@@ -12,15 +12,12 @@
     <title>Learn consult</title>
 
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-@*     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
- *@
-
-
     <link href="~/css/site.css" rel="stylesheet">
     <link href="~/css/site1.css" rel="stylesheet">
     <link href="~/css/site2.css" rel="stylesheet">
     <link href="~/css/site3.css" rel="stylesheet">
-    <link href="~/css/site4.css" rel="stylesheet"> 
+    <link href="~/css/site4.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -68,7 +65,7 @@
                         </li>
 
                         <li class="nav-item ">
-                            <a class="nav-link" asp-controller="Instructor" asp-action="AddCourse">
+                            <a class="nav-link" asp-controller="course" asp-action="AddCourse">
                                 Add Course
                             </a>
                         </li>
