--- a/WebApplication2/Views/Test/Course.cshtml
+++ b/WebApplication2/Views/Test/Course.cshtml
@@ -65,8 +65,15 @@
             </div>
             <div class="col-7">
                 <div class="text-end upgrade-btn">
-                    <a href="https://www.wrappixel.com/templates/xtremeadmin/" class="btn btn-danger text-white"
-                       target="_blank">Upgrade to Pro</a>
+                   @*  <a href="https://www.wrappixel.com/templates/xtremeadmin/" class="btn btn-primary text-white"
+                       target="_blank">Upgrade to Pro</a> *@
+                    <a href="@Url.Action("AddCourse", "Course")" type="button" class="btn btn-primary float-right"
+                       style="color: #fff;
+                                    background-color: #007bff;
+                                    border-color: #007bff;
+                                    box-shadow: none; margin-left:100px;">
+                        <i class="fa fa-plus"></i> Add Course
+                    </a>
                 </div>
             </div>
         </div>
@@ -81,169 +88,7 @@
         <!-- ============================================================== -->
         <!-- Sales chart -->
         <!-- ============================================================== -->
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="d-md-flex align-items-center">
-                            <div>
-                                <h4 class="card-title">Summary</h4>
-                                @* <h5 class="card-subtitle">Overview of Latest Month</h5> *@
-                            </div>
-
-                        </div>
-                        <div class="row">
-                            <!-- column -->
-                            @* <div class="col-lg-12">
-                            <div class="campaign"></div>
-                            </div> *@
-                            <!-- column -->
-
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <div class="d-flex align-items-center">
-                                                <div class="icon icon-shape bg-primary text-white rounded-circle">
-                                                    <i class="fa fa-thumbs-up"></i>
-                                                </div>
-                                                <div class="ml-3">
-                                                    <h5>Reviews</h5>
-                                                    <h2>30</h2>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a href="@Url.Action("ClicksDetails", "Dashboard")" class="btn btn-primary btn-sm mt-3">See More</a>
-                                    </div>
-
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <div class="d-flex align-items-center">
-                                                <div class="icon icon-shape bg-primary text-white rounded-circle">
-                                                    <i class="fa fa-eye"></i>
-                                                </div>
-                                                <div class="ml-3">
-                                                    <h5>Courses</h5>
-                                                    <h2>100</h2>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a href="@Url.Action("ClicksDetails", "Dashboard")" class="btn btn-primary btn-sm mt-3">See More</a>
-                                    </div>
-                                </div>
-                                @*                                   <div class="col-md-4">
-                                <div class="card">
-                                <div class="card-body">
-                                <div class="d-flex align-items-center">
-                                <div class="icon icon-shape bg-primary text-white rounded-circle">
-                                <i class="fa fa-chart-pie"></i>
-                                </div>
-                                <div class="ml-3">
-                                <h5>Students</h5>
-                                <h2>10</h2>
-
-                                </div>
-                                </div>
-                                </div>
-                                </div>
-                                </div> *@
-                            </div>
-
-
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <div class="d-flex align-items-center">
-                                                <div class="icon icon-shape bg-primary text-white rounded-circle">
-                                                    <i class="fa fa-thumbs-up"></i>
-                                                </div>
-                                                <div class="ml-3">
-                                                    <h5>Students</h5>
-                                                    <h2>30</h2>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a href="@Url.Action("ClicksDetails", "Dashboard")" class="btn btn-primary btn-sm mt-3">See More</a>
-                                    </div>
-
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <div class="d-flex align-items-center">
-                                                <div class="icon icon-shape bg-primary text-white rounded-circle">
-                                                    <i class="fa fa-eye"></i>
-                                                </div>
-                                                <div class="ml-3">
-                                                    <h5>Instructors</h5>
-                                                    <h2>100</h2>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a href="@Url.Action("ClicksDetails", "Dashboard")" class="btn btn-primary btn-sm mt-3">See More</a>
-                                    </div>
-                                </div>
-                                @*                                   <div class="col-md-4">
-                                <div class="card">
-                                <div class="card-body">
-                                <div class="d-flex align-items-center">
-                                <div class="icon icon-shape bg-primary text-white rounded-circle">
-                                <i class="fa fa-chart-pie"></i>
-                                </div>
-                                <div class="ml-3">
-                                <h5>Students</h5>
-                                <h2>10</h2>
-
-                                </div>
-                                </div>
-                                </div>
-                                </div>
-                                </div> *@
-                            </div>
-
-
-
-
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            @* <div class="col-md-4">
-            <div class="card">
-            <div class="card-body">
-            <h4 class="card-title">Feeds</h4>
-            <div class="feed-widget">
-            <ul class="list-style-none feed-body m-0 p-b-20">
-            <li class="feed-item">
-            <div class="feed-icon bg-info"><i class="far fa-bell"></i></div> You have 4
-            pending tasks. <span class="ms-auto font-12 text-muted">Just Now</span>
-            </li>
-            <li class="feed-item">
-            <div class="feed-icon bg-success"><i class="ti-server"></i></div> Server #1
-            overloaded.<span class="ms-auto font-12 text-muted">2 Hours ago</span>
-            </li>
-            <li class="feed-item">
-            <div class="feed-icon bg-warning"><i class="ti-shopping-cart"></i></div> New
-            order received.<span class="ms-auto font-12 text-muted">31 May</span>
-            </li>
-            <li class="feed-item">
-            <div class="feed-icon bg-danger"><i class="ti-user"></i></div> New user
-            registered.<span class="ms-auto font-12 text-muted">30 May</span>
-            </li>
-            </ul>
-            </div>
-            </div>
-            </div>
-            </div> *@
-        </div>
+   
         <!-- ============================================================== -->
         <!-- Sales chart -->
         <!-- ============================================================== -->
@@ -284,13 +129,7 @@
                                     <th scope="col">Status</th>
                                     <th scope="col">Addition Date</th>
                                     <th scope="col">
-                                        Actions<a href="@Url.Action("AddCourse", "Course")" type="button" class="btn btn-primary float-right"
-                                                  style="color: #fff;
-                                    background-color: #007bff;
-                                    border-color: #007bff;
-                                    box-shadow: none; margin-left:100px;">
-                                            <i class="fa fa-plus"></i> Add Course
-                                        </a>
+                                        Actions
                                     </th>
 
                                 </tr>
@@ -510,4 +349,3 @@
     <!-- End footer -->
     <!-- ============================================================== -->
 </div>
-
