--- a/WebApplication2/Views/Test/Last.cshtml
+++ b/WebApplication2/Views/Test/Last.cshtml
@@ -1,10 +1,7 @@
-﻿@inject LconsultDBContext _context
-@{
+﻿@using static WebApplication2.ViewModels.PagenationViewModel
+@model PaginatedList<Course>
 
-    var course = _context.Courses.ToList();
-    var review = _context.Reviews.ToList();
 
-}
 @{
     Layout = "_Admin1Layout";
 }
@@ -68,10 +65,10 @@
 
             </div>
             <div class="col-7">
-           @*      <div class="text-end upgrade-btn">
+                <div class="text-end upgrade-btn">
                     <a href="https://www.wrappixel.com/templates/xtremeadmin/" class="btn btn-danger text-white"
                        target="_blank">Upgrade to Pro</a>
-                </div> *@
+                </div>
             </div>
         </div>
     </div>
@@ -108,17 +105,17 @@
                                     <div class="card">
                                         <div class="card-body">
                                             <div class="d-flex align-items-center">
-                                                <div class="icon icon-shape bg-secondary text-white rounded-circle">
-                                                    <i class="fa fa-comment"></i>
+                                                <div class="icon icon-shape bg-primary text-white rounded-circle">
+                                                    <i class="fa fa-thumbs-up"></i>
                                                 </div>
                                                 <div class="ml-3">
                                                     <h5>Reviews</h5>
-                                                    <h2>@review.Count</h2>
+                                                    <h2>30</h2>
 
                                                 </div>
                                             </div>
                                         </div>
-                                        <a href="@Url.Action("review", "admin")" class="btn btn-light btn-sm mt-3">See More</a>
+                                        <a href="@Url.Action("ClicksDetails", "Dashboard")" class="btn btn-primary btn-sm mt-3">See More</a>
                                     </div>
 
                                 </div>
@@ -126,17 +123,17 @@
                                     <div class="card">
                                         <div class="card-body">
                                             <div class="d-flex align-items-center">
-                                                <div class="icon icon-shape bg-secondary text-white rounded-circle">
-                                                    <i class="fa fa-book"></i>
+                                                <div class="icon icon-shape bg-primary text-white rounded-circle">
+                                                    <i class="fa fa-eye"></i>
                                                 </div>
                                                 <div class="ml-3">
                                                     <h5>Courses</h5>
-                                                    <h2>@course.Count</h2>
+                                                    <h2>100</h2>
 
                                                 </div>
                                             </div>
                                         </div>
-                                        <a href="@Url.Action("course", "admin")" class="btn btn-light btn-sm mt-3">See More</a>
+                                        <a href="@Url.Action("ClicksDetails", "Dashboard")" class="btn btn-primary btn-sm mt-3">See More</a>
                                     </div>
                                 </div>
                                 @*                                   <div class="col-md-4">
@@ -163,8 +160,8 @@
                                     <div class="card">
                                         <div class="card-body">
                                             <div class="d-flex align-items-center">
-                                                <div class="icon icon-shape bg-secondary text-white rounded-circle">
-                                                    <i class="fa fa-user-circle"></i>
+                                                <div class="icon icon-shape bg-primary text-white rounded-circle">
+                                                    <i class="fa fa-thumbs-up"></i>
                                                 </div>
                                                 <div class="ml-3">
                                                     <h5>Students</h5>
@@ -173,7 +170,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <a href="@Url.Action("ClicksDetails", "Dashboard")" class="btn btn-light btn-sm mt-3">See More</a>
+                                        <a href="@Url.Action("ClicksDetails", "Dashboard")" class="btn btn-primary btn-sm mt-3">See More</a>
                                     </div>
 
                                 </div>
@@ -181,8 +178,8 @@
                                     <div class="card">
                                         <div class="card-body">
                                             <div class="d-flex align-items-center">
-                                                <div class="icon icon-shape bg-secondary text-white rounded-circle">
-                                                    <i class="fa fa-id-card"></i>
+                                                <div class="icon icon-shape bg-primary text-white rounded-circle">
+                                                    <i class="fa fa-eye"></i>
                                                 </div>
                                                 <div class="ml-3">
                                                     <h5>Instructors</h5>
@@ -191,7 +188,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <a href="@Url.Action("ClicksDetails", "Dashboard")" class="btn btn-light btn-sm mt-3">See More</a>
+                                        <a href="@Url.Action("ClicksDetails", "Dashboard")" class="btn btn-primary btn-sm mt-3">See More</a>
                                     </div>
                                 </div>
                                 @*                                   <div class="col-md-4">
@@ -254,7 +251,7 @@
         <!-- ============================================================== -->
         <!-- Table -->
         <!-- ============================================================== -->
-@*         <div class="row">
+        <div class="row">
             <!-- column -->
             <div class="col-12">
                 <div class="card">
@@ -265,63 +262,71 @@
                                 <h4 class="card-title"></h4>
                                 <h5 class="card-subtitle"></h5>
                             </div>
-
+                            @*                                 <div class="ms-auto">
+                            <div class="dl">
+                            <select class="form-select shadow-none">
+                            <option value="0" selected>Monthly</option>
+                            <option value="1">Daily</option>
+                            <option value="2">Weekly</option>
+                            <option value="3">Yearly</option>
+                            </select>
+                            </div>
+                            </div> *@
                         </div>
                         <!-- title -->
                     </div>
                     <div id="course-list">
                         <table class="table table-striped">
                             <thead>
-                                <tr class="bg-light">
-                                    <th scope="col">UserName</th>
-                                    <th scope="col">Rating</th>
-                                    <th scope="col">CourseName</th>
+                                <tr>
+                                    <th scope="col">Picture</th>
+                                    <th scope="col">Title</th>
+                                    <th scope="col">Price Status</th>
+                                    <th scope="col">Status</th>
                                     <th scope="col">Addition Date</th>
-                                    <th scope="col">Actions</th>
+                                    <th scope="col">
+                                        Actions<a href="@Url.Action("AddCourse", "Course")" type="button" class="btn btn-primary float-right"
+                                                  style="color: #fff;
+                                    background-color: #007bff;
+                                    border-color: #007bff;
+                                    box-shadow: none; margin-left:100px;">
+                                            <i class="fa fa-plus"></i> Add Course
+                                        </a>
+                                    </th>
+
                                 </tr>
                             </thead>
                             <tbody>
-                                @foreach (var review in Model)
+                                @foreach (var course in Model)
                                 {
                                     <tr>
-                                        <td>@review.Student</td>
-                                        <td>
-                                            <ul class="stars" style="color:red">
-                                                @switch (review.Rate)
-                                                {
-                                                    case 5:
-                                                        <i class="fa fa-star"></i>
-                                                        <i class="fa fa-star"></i>
-                                                        <i class="fa fa-star"></i>
-                                                        <i class="fa fa-star"></i>
-                                                        <i class="fa fa-star"></i>
-                                                        break;
-                                                    case 4:
-                                                        <i class="fa fa-star"></i>
-                                                        <i class="fa fa-star"></i>
-                                                        <i class="fa fa-star"></i>
-                                                        <i class="fa fa-star"></i>
-                                                        break;
-                                                    case 3:
-                                                        <i class="fa fa-star"></i>
-                                                        <i class="fa fa-star"></i>
-                                                        <i class="fa fa-star"></i>
-                                                        break;
-                                                    case 2:
-                                                        <i class="fa fa-star"></i>
-                                                        <i class="fa fa-star"></i>
-                                                        break;
-                                                    default:
-                                                        <i class="fa fa-star"></i>
-                                                        break;
-                                                }
-                                            </ul>
+                                        <td style="width:10%; height:10%;">
+                                            @if (course.Picture is null)
+                                            {
+
+                                                course.Picture = "noimage.png";
+
+
+
+                                            }<a href="#"><img src="~/images/courses/@course.Picture" alt="" class="rounded-circle img-fluid" alt="" style="margin-bottom:12px;"></a>
                                         </td>
-                                        <td>@review.Course.Title</td>
-                                        <td>@review.RatingDate</td>
+                                        <td>@course.Title</td>
                                         <td>
-                                            <a href="@Url.Action("EditReview", "review", new { id = review.ReviewId })" class="btn btn-light btn-action">Update</a>
-                                            <a href="@Url.Action("Delete", "review", new { id = review.ReviewId })" class="btn btn-light btn-action" onclick="return confirm('Are you sure you want to delete this review?');">Delete</a>
+                                            @if (course.PriceStatus is true)
+                                            {
+                                                <span class="badge bg-success">Paid</span>
+                                            }
+                                            else
+                                            {
+                                                <span class="badge bg-secondary">Free</span>
+                                            }
+                                        </td>
+                                        <td>@course.Claimed</td>
+                                        <td>@course.AddingDate</td>
+                                        <td>
+                                            <a href="@Url.Action("EditCourse", "Course", new { id = course.CourseId })" class="btn btn-light btn-action">Update</a>
+                                            <a href="@Url.Action("Delete", "Courses", new { id = course.CourseId })" class="btn btn-light btn-action" onclick="return confirm('Are you sure you want to delete this course?');">Delete</a>
+
                                         </td>
                                     </tr>
                                 }
@@ -347,7 +352,7 @@
                     <a class="page-link" asp-action="test" asp-route-pageNumber="@(Model.PageIndex + 1)">Next</a>
                 </li>
             </ul>
-        </nav> *@
+        </nav>
         <!-- ============================================================== -->
         <!-- Table -->
         <!-- ============================================================== -->
@@ -507,112 +512,3 @@
     <!-- ============================================================== -->
 </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@* @using static WebApplication2.ViewModels.PagenationViewModel
-@model PaginatedList<Review>
-
-@{
-    Layout = "_AdminLayout";
-}
-<div class="col-lg-9">
-    <h2 id="results-count">
-      
-    </h2>
-
-    <div id="course-list">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th scope="col">UserName</th>
-                    <th scope="col">Rating</th>
-                    <th scope="col">CourseName</th>
-                    <th scope="col">Addition Date</th>
-                    <th scope="col">Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var review in Model)
-                {
-                    <tr>
-                        <td>@review.Student</td>
-                        <td>
-                            <ul class="stars" style="color:red">
-                                @switch (review.Rate)
-                                {
-                                    case 5:
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        break;
-                                    case 4:
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        break;
-                                    case 3:
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        break;
-                                    case 2:
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        break;
-                                    default:
-                                        <i class="fa fa-star"></i>
-                                        break;
-                                }
-                            </ul>
-                        </td>
-                        <td>@review.Course.Title</td>
-                        <td>@review.RatingDate</td>
-                        <td>
-                            <a href="@Url.Action("EditReview", "review", new { id = review.ReviewId })" class="btn btn-light btn-action">Update</a>
-                            <a href="@Url.Action("Delete", "review", new { id = review.ReviewId })" class="btn btn-light btn-action" onclick="return confirm('Are you sure you want to delete this review?');">Delete</a>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-
-    <nav aria-label="Page navigation">
-        <ul class="pagination">
-            <li class="page-item @(Model.HasPreviousPage ? "" : "disabled")">
-                <a class="page-link" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)">Previous</a>
-            </li>
-            @for (int i = 1; i <= Model.TotalPages; i++)
-            {
-                <li class="page-item @(i == Model.PageIndex ? "active" : "")">
-                    <a class="page-link" asp-action="Index" asp-route-pageNumber="@i">@i</a>
-                </li>
-            }
-            <li class="page-item @(Model.HasNextPage ? "" : "disabled")">
-                <a class="page-link" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)">Next</a>
-            </li>
-        </ul>
-    </nav>
-</div> *@
